# salmonpy

./: .gitignore  CHANGELOG.md  README.md  __init__.py  _quarto.yml  dictionary.py  dwc_dp.py  dwc_dp_export.py  github_io.py  ices_vocab.py  index.qmd  integrate-data.qmd  ontology_fetch.py  package_io.py  publish-data.qmd  pyproject.toml  semantics.py  term_deduplication.py  term_search.py  validation.py
.github/workflows/: parity.yml
data/: __init__.py
scripts/: add_exec_summary.py  draft_new_term.py  validate_sdp.py
styles/: custom.css
tests/: smoke.py  test_dictionary.py  test_dwc_dp.py  test_dwc_dp_export.py  test_github_io.py  test_ices_vocab.py  test_package_io.py  test_roundtrip.py  test_semantics.py  test_term_deduplication.py  test_term_search.py  test_validation.py
