[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salmonpy"
version = "0.1.2"
description = "Python mirror of the metasalmon R package for Salmon Data Packages"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Data Stewardship Unit"}]
dependencies = ["pandas>=1.5", "requests>=2.31"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
salmonpy = ["data/iadopt-terminologies.csv", "data/ontology-preferences.csv"]
